--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "node": "14.11.0"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.13",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.1.2",
